syntax = "proto3";

package state;

message CmdContext
{
    enum CMD {
        // 取消连接，就是客户端连接断开了，得告诉state server需要执行断开连接的业务操作
        CancelConnCmd = 0; 
        // 发送消息，就是客户端给网关发送了数据，得告诉state server需要执行发送消息的业务操作   
        SendMsgCmd = 1;
    }

    CMD Cmd = 1;

    string endpoint = 2;

    // 客户端在网关中的连接id，得通过它找到客户端的TcpConn连接对象，所以state server得带回来
    uint64 ConnID = 3;

    // 具体请求的函数参数之类的，或者客户端发送的消息数据
    bytes Payload = 4;
}